# mcnnm

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Comparison.ipynb  Example.ipynb  Makefile  README.md  fect_data.csv  fect_results.csv  fect_test.R  mypy.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-approve-dependabot.yml  cd.yml  ci.yml  publish.yml  version-bump.yml
benchmarking/: benchmark_estimate.py  benchmark_util.py  compilation_logging.py  test_jit.py
docs/: Makefile  api.rst  conf.py  custom_types.pyi  development.rst  examples.rst  index.rst  installation.rst  references.rst  requirements.txt  usage.rst  validation.rst
profiling/: profiling.py  run_profiling.py
src/mcnnm/: __init__.py  core.py  core_utils.py  estimate.py  main.py  simulate.py  timer.py  types.py  util.py  utils.py  validation.py  verbose.py  wrappers.py
tests/: test_1_core_utils.py  test_2_core.py  test_3_utils.py  test_4_validation.py  test_5_wrappers.py  test_accuracy_cv.py  test_accuracy_holdout.py  test_accuracy_holdout_validation.py  test_accuracy_simple.py  test_core.py  test_core_utils.py  test_estimate.py  test_estimation_options.py  test_jit.py  test_main.py  test_mcnnm_simple.py  test_util.py  test_utils.py  test_validation.py
